# 01-handle-csv

./: Cargo.toml  README.md  cliff.toml  deny.toml
src/: lib.rs  main.rs  options.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/lib/: options.rs  process.rs
src/process/: base64_process.rs  csv_process.rs  generate_password.rs  mod.rs
