[package]
name = "csvtools"
version = "0.1.0"
edition = "2021"
authors = ["layen <15638470820@163.com>"]

license = "MIT"

# [lib]
# name = "lib"
# path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
toml = "0.8.13"
